Add api to create recruiter
