# gapi/server.go
@@ -3,16 +3,16 @@ package gapi
 import (
 	"fmt"
 
-	db "github.com/CineDeepMatch/Backend-server/db/sqlc"
-	util "github.com/CineDeepMatch/Backend-server/db/utils"
-	mongodb "github.com/CineDeepMatch/Backend-server/mongodb/repositories"
-	"github.com/CineDeepMatch/Backend-server/pb"
-	"github.com/CineDeepMatch/Backend-server/token"
-	"github.com/CineDeepMatch/Backend-server/worker"
+	db "github.com/Dee-Dee-Tiger-Hacks/Backend-Server/db/sqlc"
+	util "github.com/Dee-Dee-Tiger-Hacks/Backend-Server/db/utils"
+	mongodb "github.com/Dee-Dee-Tiger-Hacks/Backend-Server/mongodb/repositories"
+	"github.com/Dee-Dee-Tiger-Hacks/Backend-Server/pb"
+	"github.com/Dee-Dee-Tiger-Hacks/Backend-Server/token"
+	"github.com/Dee-Dee-Tiger-Hacks/Backend-Server/worker"
 )
 
 type Server struct {
-	pb.UnimplementedCineDeepMatchServer
+	pb.UnimplementedDeeDeeServer
 	config          util.Config
 	store           db.Store
 	tokenMaker      token.Maker
